--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="main">
     <h1>Tic Tac Toe</h1>
+    <div id="result"></div>
     <div id="outer">
 
         <div data-cell="0" class="inner"></div>
